feat: 자동완성 안정화 및 설정 기반 제외 경로 지원